@@ -1,3 +1,12 @@
+2008-12-17  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+
+	NB#95917
+
+	* src/mb/hd-comp-mgr.c: hd_comp_mgr_close_app()
+	  Be prepared to close windows who lost their leaders.
+	* src/mb/hd-app.c: hd_app_close_followers()
+	  Added some robustness checks.
+
 2008-12-17  Gordon Williams <gordon.williams@collabora.co.uk>
 
 	* src/mb/hd-comp-mgr.c:
